# sfft-modified

./: log.txt  run.sh  wscript
sfft_bench/: CMakeLists.txt  main.cpp  measure.cpp
src/: computefourier-3.0.cc  computefourier-3.0.h  fft.h  fftw.cc  filters.cc  filters.h  sfft.cc  sfft.h
tools/.waf3-1.7.5-47d5afdb5e7e2856f7f46a7101914026/waflib/: Build.py  Context.py  Node.py  Scripting.py  Utils.py
tools/.waf3-1.7.5-47d5afdb5e7e2856f7f46a7101914026/waflib/Tools/: c_config.py  c_preproc.py  fc_config.py  javaw.py  msvc.py
